# TacticEmpire

./: CMakeLists.txt
include/: Jeu.hpp  ResourcesSingleton.hpp
include/GUI/: GUI.hpp
include/GUI/Widget/: Widget.hpp
include/GameState/: State.hpp  StateInGame.hpp
include/Manager/: InputManager.hpp  StateManager.hpp
include/Tools/: Mathf.hpp
src/: Jeu.cpp  ResourcesSingleton.cpp
src/GUI/: GUI.cpp
src/GUI/Widget/: Widget.cpp
src/GameState/: StateInGame.cpp
src/Manager/: InputManager.cpp  StateManager.cpp
src/Tools/: Mathf.cpp
